feat(phase0): implement makefile-driven development setup
- Create comprehensive Makefile with all development targets
- Add VSCode workspace settings and extensions recommendations
- Configure pre-commit hooks for code quality
- Organize logo into docs/images/ directory
- Update .gitignore to include VSCode workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,11 @@ out/
 .pnp.*
 
 # IDEs
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+!.vscode/launch.json
 .idea/
 *.swp
 *.swo
