--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,9 +34,9 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-    "source.fixAll.eslint": true,
-    "source.fixAll.ruff": true
+    "source.organizeImports": "explicit",
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.ruff": "explicit"
   },
   
   "[python]": {
